# editdistance

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake_install.cmake  hostcode.cpp
BachRefLatex_14/: .bach-ref-2009.tex.swp  2  bach-ref-2009.aux  bach-ref-2009.bbl  bach-ref-2009.blg  bach-ref-2009.dvi  bach-ref-2009.tex  sigproc.bib
BachRefLatex_14 original/: bach-ref-2009.tex
code/Heus/: CMakeCache.txt  EditDistance_Kernel.cl  Makefile  hostcode  hostcode.cpp
code/OpenCLexample/: hello  hello.c
code/edit_distance/: CMakeLists.txt  kernel.cl  main.cpp  utils.cpp  utils.h
editdistance/: Makefile
test/: test.py  test_sub.py
test/results/: r100000000000ave0  r100000000000ave1  r100000000000ave2  r100000000000ave3  r100000000000ave4  r100000000000ave5  r100000000000ave6  r100000000000ave_slb0  r100000000000ave_slb1  r100000000000ave_slb2  r100000000000ave_slb3  r100000000000ave_slb4  r100000000000ave_slb5  r100000000000ave_slb6  r100000000000slb0  r100000000000slb1  r100000000000slb2  r100000000000slb3  r100000000000slb4  r100000000000slb5  r100000000000slb6  r10000000000ave0  r10000000000ave1  r10000000000ave2  r10000000000ave3  r10000000000ave4  r10000000000ave5  r10000000000ave6  r10000000000ave_slb0  r10000000000ave_slb1  r10000000000ave_slb2  r10000000000ave_slb3  r10000000000ave_slb4  r10000000000ave_slb5  r10000000000ave_slb6  r10000000000control  r10000000000slb0  r10000000000slb1  r10000000000slb2  r10000000000slb3  (+677 more)
text/Twente University LaTeX presentations Template/: UT.cls  UT.tex  content.txt
text/paper/: paper-main.tex  paper-q1.tex  (+4 more)
(+48 files in other folders)
